Initial commit of ARCompact backend (very much WiP).
Currently will compile but llc cannot allocate a target machine for ARCompact
as we haven't provided a subclass yet.

Roughly corresponds to the end of Chapter 2 of the LLVM tutorial:
http://jonathan2251.github.io/lbd

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -75,6 +75,7 @@ set(LLVM_LIBDIR_SUFFIX "" CACHE STRING "Define suffix of library directory name 
 
 set(LLVM_ALL_TARGETS
   AArch64
+  ARCompact
   ARM
   CppBackend
   Hexagon
